manifests/app-deployment-clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booklibrary
  labels:
    app: booklibrary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booklibrary
  template:
    metadata:
      labels:
        app: booklibrary
    spec:
      containers:
      - name: booklibrary
        image: joergjo/booklibrary-netcore
        ports:
        - containerPort: 80
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 30
        volumeMounts:
        - name: secrets-volume
          mountPath: /app/secrets
          readOnly: true
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      tolerations:
      - key: "kubernetes.azure.com/scalesetpriority"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
      volumes:
      - name: secrets-volume
        secret:
          secretName: booklibrary-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: booklibrary-svc
spec:
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app: booklibrary
