manifests/clusterip-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: booklibrary
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: booklibrary
    spec:
      containers:
      - name: booklibrary
        image: joergjo/booklibrary-netcore:latest
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: booklibrary-svc
spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: booklibrary
