manifests/zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  labels:
    app: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin
        ports:
        - containerPort: 9411
          name: http
        livenessProbe:
          httpGet:
            path: "/zipkin/"
            port: http
          initialDelaySeconds: 5
          periodSeconds: 60
        # readinessProbe:
        #   httpGet:
        #     path: "/api/v2/services"
        #     port: 9411
        #   initialDelaySeconds: 5
        #   periodSeconds: 30
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-svc
spec:
  ports:
  - port: 9411
    targetPort: http
  selector:
    app: zipkin
